# roboarmsimulator

./: CMakeLists.txt  README.md
include/: RobotArm.h  Visualizer.h
src/: RobotArm.cpp  Visualizer.cpp  main.cpp
tests/: RobotArmTest.cpp
